2007-12-24  Gabriel <contact@huau-gabriel.fr>
	* src/core/include/camerafirstpersonlistener.h: Initial release
	* src/core/include/camerafirstpersonlistener.cpp: Initial release 
	* src/core/include/camerafreeflylistener.h: Initial release
	* src/core/include/camerafreeflylistener.cpp: Initial release
	* src/core/include/camerathirdpersonlistener.h: Initial release
	* src/core/include/camerathirdpersonlistener.cpp: Initial release
	* src/core/include/camerasplinelistener.h: Initial release
	* src/core/include/camerasplinelistener.cpp: Initial release
	* src/core/include/cgraphicmodule.cpp: Change spline camera to third person camera

2007-12-21  Paf <paf@tuxfamily.org>
	* src/graphic/include/csceneparser.h: Revert the replacement of
	Glib::ustring by std::string. It was breaking inheritance.
	* src/graphic/src/cgraphicmodule.cpp: Moved SkyDome and Terrain loading to
	scene parser
	* src/graphic/src/csceneparser.cpp: Add Terrain and SkyDome nodes parsing;
	Revert the replacement of Glib::ustring by std::string

2007-12-17  Paf <paf@tuxfamily.org>
	* src/core/include/attributehandlerregistry.h: Remove \r
	* src/core/include/cpersistentobjectproxy.h: Remove \r
	* src/core/include/string.h: Remove \r
	* src/core/include/scalar.h: Add default values to constructor
	* src/core/include/persistentobjectmanager.h: Fix comments
	* src/core/include/camera.h: Camera inherits of CPersistentObjectProxy
	instead of PersistentObject
	* src/core/src/persistentobject.cpp: Remove \r
	* src/core/src/camerafirstperson.cpp: Replace CGenericMessageManager by
	CMessageModule
	* src/core/src/attributehandlerregistry.cpp: Add an attribute handler for
	CMeshPageRenderer
	* src/core/Makefile: Update targets
	* src/graphic/include/cgraphicmodule.h: Put resource path loading in a private method
	* src/graphic/src/cgraphicmodule.cpp: Put resource path loading in a
	private method and use PersistentObject instead of Ogre resource.cfg to
	load these resources paths              