@@ -24,6 +24,7 @@
 |   Changelog :                                                             |
 |               20/06/2007 - Gabriel - Initial release                      |
 |               10/30/2007 - Gabriel - add time to update()                 |
+|               12/24/2007 - Gabriel - delete scenemanager from Ctor        |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
@@ -70,7 +71,7 @@ namespace Gnoll
 			 * This is the constructor.
 			 * @param _instance This is the instance name; the Camera's name
 			 */
-			CameraFirstPerson(const Glib::ustring& instanceName, Ogre::SceneManager* pSM);
+			CameraFirstPerson(const Glib::ustring& instanceName);
 
 			/**
 			 * This is the destructor
